--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
   },
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "react": "^17.0.2",
@@ -22,7 +26,9 @@
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
+    "esbuild-register": "^3.3.2",
     "postcss": "^8.4.6",
+    "prisma": "^3.9.2",
     "tailwindcss": "^3.0.22",
     "typescript": "^4.1.2"
   },
